<resources>
    <string name="app_name">Restaurant Name</string>
    <string name="login_staff">Login as Staff</string>
    <string name="login_customer">Login as Customer</string>
    <string name="view_menu_noLog">View Menu (No Login Required)</string>
    <string name="view_menu">View Menu</string>
    <string name="customer_login">Customer Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_back">Back</string>
    <string name="restaurant_name">Dylan\'s Diner</string>
    <string name="welcome_message">Welcome %1$s,\nWhat would you like to do?</string>
    <string name="logout">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications">No notifications yet</string>
    <string name="placeholder">Placeholder message</string>
    <string name="timestamp">2h ago</string>
    <string name="enter_email">Enter email address</string>
    <string name="placeholder_email">johnsmith@email.com</string>
    <string name="enter_password">Enter Password</string>
    <string name="placeholder_password">Password123!</string>
    <string name="continue_button">Continue</string>
    <string name="here">here</string>
    <string name="menu">Menu</string>
    <string name="food_image">Food image</string>
    <string name="view_bookings">View bookings</string>
    <string name="your_bookings">Your Bookings</string>
    <string name="no_bookings">You have no bookings yet.</string>
    <string name="new_booking"> + Make new booking</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="select_date">Select a Date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_time">Select a Time</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="delete_booking">Delete Booking</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="placeholder_name">John Smith</string>
    <string name="make_booking">Book a table!</string>
    <string name="burger">Burger</string>
    <string name="chips">Chips</string>
    <string name="tenner">Price: £10.00</string>
    <string name="fiver">Price: £5.00</string>
    <string name="chicken">Chicken</string>
    <string name="one">Price: £1.00</string>
    <string name="allergy">Allergy info: may contain nuts etc.</string>
    <string name="food_name">Food name</string>
    <string name="not_user">Not a user? Create account here</string>
    <string name="already_user">Already have an account? Log in here</string>
    <string name="no_bookings_yet">No Bookings yet</string>
    <string name="staff_number">Enter Staff Number</string>
    <string name="staff_number_placeholder">123456789</string>
    <string name="manage_menu">Manage Menu</string>
    <string name="manage_bookings">Manage Bookings</string>
    <string name="staff_welcome">Hello, valued member of staff</string>
    <string name="notification_settings">Notification\nSettings</string>
    <string name="Party_size">Select party size</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="item_name">Item name</string>
    <string name="price">Price (e.g. 5.00)</string>
    <string name="allergy_info">Allergy info (optional)</string>
    <string name="save">Save</string>
    <string name="first_name">Enter First Name</string>
    <string name="john">John</string>
    <string name="last_name">Enter Last Name</string>
    <string name="smith">Smith</string>
    <string name="new_date">Select new date</string>
    <string name="new_time">Select new time</string>
    <string name="party_size">Select party size</string>
    <string name="confirm_changes">Confirm changes</string>
    <string name="edit_menu_item">Edit Menu Item</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_item">Delete item</string>
    <string name="tagline">Comfort food • Cozy tables</string>
    <string name="open">Open daily • 9am – 9pm</string>
    <string name="add_new_item">+ Add new item</string>
    <string name="clear_all">Clear all</string>
    <string name="settings">Settings</string>
    <string name="booking_tap">Tap a booking to edit</string>
    <string name="placeholder_date">Mon 01 Jan 2026</string>
    <string name="booked_by">Booked by: Test User</string>
    <string name="placeholder_party">Party size: 2</string>
    <string name="_2">2</string>

</resources>
