<?xml version='1.0' encoding='utf-8'?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="30dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="70dp"
            android:gravity="center_horizontal"
            android:text="@string/restaurant_name"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/enter_email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtCustomerEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_background"
            android:hint="@string/placeholder_email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/enter_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtCustomerPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:hint="@string/placeholder_password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnCustomerContinue"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_primary"
            android:text="@string/continue_button"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txtCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/not_user"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>