<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/btn_back"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/txtRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="70dp"/>

        <TextView
            android:id="@+id/txtFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_marginTop="16dp" />

        <ImageView
            android:id="@+id/imgFood"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corners"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/food_image" />

        <TextView
            android:id="@+id/txtFoodPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiver"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="32dp" />

        <!-- Allergy Info -->
        <TextView
            android:id="@+id/txtAllergyInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</RelativeLayout>
