<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back" />

    <LinearLayout
        android:id="@+id/contentWrapper"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/txtRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/txtAddBookingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_booking"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp" />

        <TextView
            android:id="@+id/txtSelectDate"
            android:layout_width="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_height="50dp"
            android:text="@string/select_date"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp"
            android:padding="12dp" />

        <TextView
            android:id="@+id/txtSelectTime"
            android:layout_width="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_height="50dp"
            android:text="@string/select_time"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_background"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnConfirmBooking"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/confirm_booking"
            android:textColor="@android:color/white"
            android:background="@drawable/button_ripple"
            android:layout_marginTop="32dp" />

    </LinearLayout>

</RelativeLayout>
