<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    android:padding="24dp" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_name"
        android:textSize="48sp"
        android:textStyle="bold"
        android:paddingBottom="32dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="100dp"
        android:gravity="top|center_horizontal"/>

    <Button
        android:id="@+id/btnStaffLogin"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/login_staff"
        android:textColor="@android:color/white"
        android:background="@drawable/button_ripple"
        android:layout_marginTop="16dp" />


    <Button
        android:id="@+id/btnCustomerLogin"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/login_customer"
        android:textColor="@android:color/white"
        android:background="@drawable/button_ripple"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnViewMenu"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/view_menu_noLog"
        android:textColor="@android:color/white"
        android:background="@drawable/button_ripple"
        android:layout_marginTop="16dp" />

</LinearLayout>
