<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@drawable/table_design">

    <TextView
        android:id="@+id/txtBookingDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/date"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtBookingTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/time"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/delete_booking"
        android:layout_marginStart="8dp" />
</LinearLayout>
