<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/txtRestaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_bookings"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@id/txtRestaurantName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBookings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtTitle"
        android:layout_marginTop="12dp" />

</RelativeLayout>
